syntax = "proto2";

package phxqueue.config.proto;
import "phxqueue/comm/proto/comm.proto";

message StoreConfig {
    repeated Store stores = 1;
}

message Store {
    optional int32 store_id = 1;
    repeated comm.proto.Addr addrs = 2;
    optional int32 scale = 3;
    repeated int32 pub_ids = 20;
}
